@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 2, 2011</p>
+      <p>Last Updated: March 5, 2011</p>
     </td>
   </tr>
 </table>
@@ -2115,12 +2115,17 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       occurs.
     * configs/olimex-lpc1766stk -- Added an LED encoded to indicate if the LPC1766
       is in sleeping.      
-	* examples/mm  -- This is a simplified version of the "built-in" memory manager
-	  test of mm/mm_test.c.  It is simplified because it does not have access to
-	  the internals of the memory manager as does mm/mm_test.c, but it has the
-	  advantage that it runs in the actual NuttX tasking environment (the
-	  mm/mm_test.c only runs in a PC simulation environment).
+    * examples/mm  -- This is a simplified version of the "built-in" memory manager
+      test of mm/mm_test.c.  It is simplified because it does not have access to
+      the internals of the memory manager as does mm/mm_test.c, but it has the
+      advantage that it runs in the actual NuttX tasking environment (the
+      mm/mm_test.c only runs in a PC simulation environment).
     * drivers/mmcsd_sdio.c/h -- Several corrections submitted by Uros Platise.
+    * arch/x86 - Provide support for x86 architectures.  Support for the i486
+      architecture under QEMU is provided under arch/x86/include/i486,
+      arch/x86/include/qemu, arch/x86/src/i486, and arch/x86/src/qemu.
+    * configs/qemu-i486 - "Board" support configurations for verifying the QEME
+      i486 port.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
